tests/compile-fail/integration__integration__timeline_arg0__signature_with_arg0_in_not_timeline.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: T(...) is invalid outside of timeline languages
  ┌─ <mapfile>:3:6
  │
3 │ 1000 T(m)
  │      ^^^^ T(...) is invalid outside of timeline languages


